--- a/views/icecream.ejs
+++ b/views/icecream.ejs
@@ -4,6 +4,6 @@
     
   </head>
   <body>
-    Wow, you like <strong><%=ice_cream%></strong> ice cream too?!  That's my favorite!
+    Wow, you like <strong><%=ice_cream%></strong> ice cream with <strong><%=topping%></strong> topping?!  That's my favorite!
   </body>
 </html>
